[package]
edition = "2021"
name = "fall_in_hell"
version = "0.0.1"

[dependencies]
bevy-inspector-egui = "0.11"
bevy_prototype_debug_lines = { version = "0.7", features = ["3d"] }
rand = "0.8.5"
bevy_tweening = "0.4.0"
bytes = "1.1.0"

[dependencies.bevy]
version = "0.7"
default-features = false
# These are the remaining default features other than `bevy_audio` and `mp3`
features = [
  "render",
  "animation",
  "bevy_winit",
  "bevy_gilrs",
  "png",
  "jpeg",
  "hdr",
  "filesystem_watcher",
  "x11"
]

[dependencies.bevy_kira_audio]
version = "0.10.0"
# `ogg` format support is enabled by default, disable if you don't want it
default-features = false
# enable the features you care about
features = [
  "wav",
  "flac",
  "mp3",
  "ogg",
]

[profile.dev]
opt-level = 3