[package]
edition = "2021"
name = "fall_in_hell"
version = "0.0.1"

[dependencies]
bevy-inspector-egui = "0.11"
bevy_mouse_tracking_plugin = "0.2.1"
bevy_prototype_debug_lines = {version = "0.7", features = ["3d"]}
bevy_tweening = "0.4.0"
bitflags = "1.3.2"
bytes = "1.1.0"
ezinput = "0.3.6"
heron = {version = "3.1.0", features = ["3d"]}
itertools = "0.10.3"
rand = "0.8.5"

[dependencies.bevy]
default-features = false
version = "0.7"
# These are the remaining default features other than `bevy_audio` and `mp3`
features = [
  "render",
  "animation",
  "bevy_winit",
  "bevy_gilrs",
  "png",
  "jpeg",
  "hdr",
  "filesystem_watcher",
  "x11",
]

[dependencies.bevy_kira_audio]
version = "0.10.0"
# `ogg` format support is enabled by default, disable if you don't want it
default-features = false
# enable the features you care about
features = [
  "mp3",
]

[profile.dev]
opt-level = 3

[profile.release]
lto = true
opt-level = "z"
strip = true
